--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="南开中学">
     <title>nkzx</title>
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script src="jquery-2.1.1.min.js"></script>
-    <script src="bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -32,7 +33,7 @@
         </div>
     </div>
     <div class="row">
-        <img src="img/head.jpg">
+        <img src="img/head.jpg" width="100%" >
     </div>
     <div class="row">
         <div class="col-lg-12">
@@ -47,21 +48,176 @@
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">小标题四</a></li>
                 </ul>
             </div>
-            <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-                    大个标题
-                </button>
-                <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dLabel">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">小标题一</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">小标题二</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">小标题三</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">小标题四</a></li>
-                </ul>
-            </div>
         </div>
 
     </div>
-
+    <div class="row">
+        <div class="col-lg-7"><img src="img/main.png"> </div>
+        <div class="col-lg-4" id="div-2">
+            <h3 class="news">校园新闻<small>&nbsp&nbspNankai  News</small></h3>
+            <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+            <button type="button" class="btn btn-default btn-sm"><a href="#">更多</a>》</button>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+        <div class="col-lg-4" id="div-1">
+            <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+            <time>12-16</time>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="col-lg-4" id="div-2">
+                <h3 class="news">校园新闻<small>&nbsp&nbspNankai  News</small></h3>
+                <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+                <button type="button" class="btn btn-default btn-sm"><a href="#">更多</a>》</button>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="col-lg-4" id="div-2">
+                <h3 class="news">校园新闻<small>&nbsp&nbspNankai  News</small></h3>
+                <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+                <button type="button" class="btn btn-default btn-sm"><a href="#">更多</a>》</button>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+            <div class="col-lg-4" id="div-1">
+                <h4>欢迎舒乙先生做客南开校园&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+                <time>12-16</time>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="col-lg-4" id="div-2">
+                <h3 class="news">快速链接<small>&nbsp&nbspLinks</small></h3>
+                <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+                <button type="button" class="btn btn-default btn-sm"><a href="#">更多</a>》</button>
+            </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+                </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+            </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+            </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+            </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+            </div>
+            <div class="btn-group btn-group-justified">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开体验创意中心</a></button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default"><a herf="#">南开共能网</a></button>
+                </div>
+            </div>
+            </div>
+        </div>
+    <div class="row" >
+        <img src="img/tail.png" width="100%">
+    </div>
+    </div>
 </div>
 </body>
 </html>
